@@ -32,8 +32,8 @@
 
 //automatic conversion of const ldns_rdf* parameter from string 
 %typemap(in,noblock=1) const ldns_rdf * (void* argp, $1_ltype tmp = 0, int res) {
-   if (PyString_Check($input)) {
-      tmp = ldns_dname_new_frm_str(PyString_AsString($input));
+   if (Python_str_Check($input)) {
+      tmp = ldns_dname_new_frm_str(SWIG_Python_str_AsChar($input));
       if (tmp == NULL) {
          %argument_fail(SWIG_TypeError, "char *", $symname, $argnum);
       }
